# routes/index.js
@@ -1,11 +1,13 @@
 const router = require('express').Router();
 
 router.use('/', require('./swagger'));
-const authRoutes = require('./authRoutes');
 
+const authRoutes = require('./authRoutes');
 router.use('/auth', authRoutes);
 
-router.use('/Movie', require('./routes'));
+// Movie routes
+const movieRoutes = require('./movieRoutes'); // ✅ make sure you have this file
+router.use('/Movie', movieRoutes);
 
 router.get('/', (req, res) => {
 
